Admin shop 21 - Admin area done (without orders)

--- a/CmsShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
@@ -77,6 +77,10 @@ else
             });
 
             ///////////////////////////////////////////////////////////////
+
+            /*
+             * Reorder pages
+             */
             $("table#pages tbody").sortable({
                 items: "tr:not(.home)",
                 placeholder: "ui-state-highlight",
@@ -90,9 +94,7 @@ else
                 }
 
             })
+            ///////////////////////////////////////////////////////////////
         });
     </script>
-
-
-
 }
