--- a/CmsShoppingCart/Content/Site.css
+++ b/CmsShoppingCart/Content/Site.css
@@ -1,1 +1,22 @@
-﻿
+﻿table.sorting tr:not(.home) {
+    cursor: pointer;
+}
+
+.ui-state-highlight {
+    border: 1px dashed #ccc;
+}
+
+div.new-cat{
+    margin-top: 30px;
+    position: relative;
+}
+
+span.ajax-text {
+    display: none;
+}
+table.sorting.categories td {
+    padding: 20px !important;
+}
+.ajaxdivtd {
+    position: absolute;
+}
